--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ Flask~=3.0.2
 profanityfilter~=2.0.6
 SQLAlchemy~=2.0.28
 boto3~=1.34.62
+MyApplication~=0.1.0
+APScheduler~=3.10.4
+textblob~=0.18.0.post0
