--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ boto3~=1.34.62
 MyApplication~=0.1.0
 APScheduler~=3.10.4
 textblob~=0.18.0.post0
+pip~=23.2.1
+utils~=1.0.2
+pillow~=10.2.0
+Jinja2~=3.1.3
+channels~=4.0.0
