--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿antiorm==1.2.1
+antiorm==1.2.1
 APScheduler==3.10.4
 asgiref==3.7.2
 attrs==23.2.0
@@ -159,3 +159,9 @@ uritemplate==4.1.1 ; python_version >= "3.11" and python_version < "4.0"
 vine==5.1.0 ; python_version >= "3.11" and python_version < "4.0"
 wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "4.0"
 zope-interface==6.2 ; python_version >= "3.11" and python_version < "4.0"
+
+jupyter~=1.0.0
+tornado~=6.4
+djangochannelsrestframework~=1.2.0
+celery~=5.3.6
+configs~=3.0.3
